# boilerplate_cmake_conan

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conan.cmake  main.cpp
